
Changes/improvements:
- #298: Look at environment variables to fill @user@ macro where possible
- #301: Remove hardcoded path to /usr/bin/php
- #295: Default for vhost_config_path is more environment-specific than necessary
- #302: Auto-create directories for vhost_config_path
- #309: Show hostname in WADF HTTP server default index page 
- Minor improvements to command line help

#######################################################################
# v0.13.2 (2009-10-19)
#######################################################################
Fix some regressions with support for older versions of SVN, and some more
tweaks to the deployment process for local PEAR packages (e.g. checkouts of
PEAR-based applications/libraries)

Changes/improvements:
- #265: Output from post deploy script should be marked more clearly
- #266: Improve output when deploying PHP CGI config
- #200: Abstract version control-specific details
- #271: Bad PEAR dependency installation when installing local PEAR packages
  in a single transaction
- #278: Don't downgrade already-installed PEAR packages when activating 
  workaround for PEAR bug 1342
- #280: Don't rely on on $_ENV; use getenv() instead
- #281: Switching of local SVN checkouts fails if existing working copy is a
  subdirectory of trunk
- Strip leading slashes from dependency tag destinations: they are always 
  relative to site root

Bugs fixed:
- #268: Issues with versions of SVN less than 1.5
- #269: With certain values of dep_pear_local_package_dirs, checkouts anywhere
  in the deployed site can be installed

#######################################################################
# v0.13.1 (2009-09-13)
#######################################################################
Dependency tags are no longer used by default for wadf-reprocess (they are still
used for initial deployment; use "wadf-reprocess --dep-tags" if you want to use
them for reprocessing). Also a major regression was fixed where confusing